# ToDo

./: README.md  pyproject.toml  todo.db
src/todo/backend/: auth.py  database.py  main.py  models.py  schemas.py  settings.py
src/todo/frontend/: app.py
